--- a/ecs-master.yaml
+++ b/ecs-master.yaml
@@ -23,7 +23,7 @@ Parameters:
 
   GitHubRepo:
     Type: String
-    Default: ecs-cicd-repo
+    Default: ecs-demo-php-simple-app
     Description: The repo name of the service.
 
   GitHubBranch:
